--- a/core/designsystem/src/main/res/values/ic_launcher_background.xml
+++ b/core/designsystem/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Budget</string>
+    <color name="ic_launcher_background">#2C7C49</color>
 </resources>
