底部导航栏的Composable初步编写

--- a/core/designsystem/src/main/res/drawable/home.xml
+++ b/core/designsystem/src/main/res/drawable/home.xml
@@ -1,12 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
+    android:width="202.3dp"
     android:height="200dp"
-    android:viewportWidth="1024"
+    android:viewportWidth="1036"
     android:viewportHeight="1024">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M937.1,482.3 L556.7,106.8c-1.9,-2.3 -6.1,-6.2 -12,-10 -9.9,-6.5 -21.1,-10.5 -33.4,-10.5 -13.1,0 -24.6,4 -34.2,10.6 -5.8,4 -9.8,8.1 -12.1,11.1L85.6,482.4c-14.7,14.4 -14.7,37.9 0,52.4 14.5,14.4 33.9,8.3 50.4,-7.9L161.5,501.6l350.8,-339.9 374.3,368.1c20.1,13.2 37.8,17.4 50.4,4.9C951.7,520.3 951.7,496.8 937.1,482.3z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M793,462c-17.4,0 -31.6,13.9 -31.6,31.2l0,0.1 0,0.1 0,350.1c0,17.4 -14.4,31.6 -32.1,31.6l-84.1,0 0,-192.2c0,-49.8 -40.8,-90.1 -91.1,-90.1l-85.3,0c-50.3,0 -91.1,40.3 -91.1,90.1l0,192.2L293.4,875.2c-17.8,0 -32.1,-14.2 -32.1,-31.6L261.3,493.4c-0,-17.4 -14.2,-31.3 -31.6,-31.3 -17.4,0 -31.6,14 -31.7,31.3l0,354.4c0,49.8 40.8,90.1 91.1,90.1l141.3,0 10.4,0 0,-10.4 0,-240.3c0,-17.4 14.4,-31.6 32.1,-31.6l76.8,0c17.8,0 32.1,14.2 32.1,31.6l0,240.3 0,10.4 10.4,0 141.3,0c50.3,0 91.1,-40.3 91.1,-90.1L824.7,493.3C824.5,476 810.4,462 793,462z"/>
+      android:pathData="M1014.6,504L573,62.6l-29.6,-29.6a36,36 0,0 0,-50.7 0L21.5,504a73,73 0,0 0,-21.5 52.6c0.5,40.2 33.9,72.3 74.2,72.3h48.6L122.7,1001.1h790.6L913.4,628.9h49.6c19.5,0 37.9,-7.7 51.8,-21.5a72.7,72.7 0,0 0,21.4 -51.8c0,-19.4 -7.7,-37.8 -21.5,-51.7zM582.1,918.9L454.1,918.9L454.1,685.7h128v233.1zM831.1,546.6L831.1,918.9L655.2,918.9L655.2,658.3c0,-25.3 -20.5,-45.7 -45.7,-45.7L426.6,612.6c-25.3,0 -45.7,20.5 -45.7,45.7v260.6L205,918.9L205,546.6h-109.7l422.9,-422.5 26.4,26.4L940.9,546.6h-109.8z"/>
 </vector>
