给底部导航栏换了更好看的图标

--- a/core/designsystem/src/main/res/drawable/line_chart.xml
+++ b/core/designsystem/src/main/res/drawable/line_chart.xml
@@ -4,9 +4,9 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M888,792H200V168c0,-4.4 -3.6,-8 -8,-8h-56c-4.4,0 -8,3.6 -8,8v688c0,4.4 3.6,8 8,8h752c4.4,0 8,-3.6 8,-8v-56c0,-4.4 -3.6,-8 -8,-8z"/>
+      android:pathData="M721.5,911.2H307.7c-108.1,0 -196.1,-88 -196.1,-196.1V301.3c0,-108.1 88,-196.1 196.1,-196.1h413.7c108.1,0 196.1,88 196.1,196.1v413.7c0,108.1 -88,196.1 -196.1,196.1zM307.7,176.8c-68.6,0 -124.5,55.8 -124.5,124.5v413.7c0,68.6 55.8,124.5 124.5,124.5h413.7c68.6,0 124.5,-55.8 124.5,-124.5V301.3c0,-68.6 -55.8,-124.5 -124.5,-124.5H307.7z"
+      android:fillColor="#34332E"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M305.8,637.7c3.1,3.1 8.1,3.1 11.3,0l138.3,-137.6L583,628.5c3.1,3.1 8.2,3.1 11.3,0l275.4,-275.3c3.1,-3.1 3.1,-8.2 0,-11.3l-39.6,-39.6c-3.1,-3.1 -8.2,-3.1 -11.3,0l-230,229.9L461.4,404c-3.1,-3.1 -8.2,-3.1 -11.3,0L266.3,586.7c-3.1,3.1 -3.1,8.2 0,11.3l39.5,39.7z"/>
+      android:pathData="M303.1,630.4c-9.4,0 -18.7,-3.6 -25.7,-10.9a35.9,35.9 0,0 1,0.7 -50.7l142.5,-138.4c23.9,-23.1 62.5,-23 86.1,0.4l78,77.3 110.3,-115.8a35.8,35.8 0,0 1,50.7 -1.2,35.8 35.8,0 0,1 1.2,50.7l-117.5,123.4a61,61 0,0 1,-43.6 19.1c-16.5,0.2 -32.3,-6.1 -44.2,-17.8L463.4,488.9l-135.3,131.5a35.9,35.9 0,0 1,-25 10.1z"
+      android:fillColor="#34332E"/>
 </vector>
