--- a/core/designsystem/src/main/res/drawable/home.xml
+++ b/core/designsystem/src/main/res/drawable/home.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="202.3dp"
+    android:width="200dp"
     android:height="200dp"
-    android:viewportWidth="1036"
+    android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1014.6,504L573,62.6l-29.6,-29.6a36,36 0,0 0,-50.7 0L21.5,504a73,73 0,0 0,-21.5 52.6c0.5,40.2 33.9,72.3 74.2,72.3h48.6L122.7,1001.1h790.6L913.4,628.9h49.6c19.5,0 37.9,-7.7 51.8,-21.5a72.7,72.7 0,0 0,21.4 -51.8c0,-19.4 -7.7,-37.8 -21.5,-51.7zM582.1,918.9L454.1,918.9L454.1,685.7h128v233.1zM831.1,546.6L831.1,918.9L655.2,918.9L655.2,658.3c0,-25.3 -20.5,-45.7 -45.7,-45.7L426.6,612.6c-25.3,0 -45.7,20.5 -45.7,45.7v260.6L205,918.9L205,546.6h-109.7l422.9,-422.5 26.4,26.4L940.9,546.6h-109.8z"/>
+      android:pathData="M754.2,922.2H272.2c-92.9,0 -168.5,-75.6 -168.5,-168.5V450.9c0,-52.4 25,-102.7 66.8,-134.3l241,-182.5c59.9,-45.4 143.6,-45.4 203.5,0l241,182.5c41.8,31.6 66.8,81.9 66.8,134.3v302.8c0,92.9 -75.6,168.5 -168.5,168.5zM513.2,171.7c-20.6,0 -41.2,6.5 -58.5,19.6L213.8,373.8c-24,18.2 -38.3,47.1 -38.3,77.2v302.8c0,53.4 43.4,96.8 96.8,96.8h482c53.4,0 96.8,-43.4 96.8,-96.8V450.9c0,-30.2 -14.3,-59 -38.3,-77.2l-241,-182.5c-17.3,-13.1 -37.9,-19.6 -58.5,-19.6z"
+      android:fillColor="#34332E"/>
+  <path
+      android:pathData="M649.9,756.7H376.5c-19.8,0 -35.8,-16 -35.8,-35.8s16,-35.8 35.8,-35.8h273.4c19.8,0 35.8,16 35.8,35.8s-16,35.8 -35.8,35.8z"
+      android:fillColor="#34332E"/>
 </vector>
