--- a/core/designsystem/src/main/res/xml/locales_config.xml
+++ b/core/designsystem/src/main/res/xml/locales_config.xml
@@ -3,4 +3,5 @@
     <!-- Add your required languages -->
     <locale android:name="zh" />
     <locale android:name="en" />
+    <locale android:name="ja" />
 </locale-config>
