--- a/core/designsystem/src/main/res/xml/locales_config.xml
+++ b/core/designsystem/src/main/res/xml/locales_config.xml
@@ -4,4 +4,5 @@
     <locale android:name="zh" />
     <locale android:name="en" />
     <locale android:name="ja" />
+    <locale android:name="ko" />
 </locale-config>
